Set to run the remote JVM with a larger perm gen size
git-svn-id: https://fluid.surelogic.com/svn/eng/trunk/sierra-tool@5304 d02ae147-ee12-4a35-9452-91c89e8b2592